--- a/cliente/src/index.css
+++ b/cliente/src/index.css
@@ -93,7 +93,7 @@ p {
   align-items: center;
   background-color: var(--naranja3);
   font-family: var(--headingFont);
-  padding: 1.8rem;
+  padding: 1.6rem;
   margin-top: 2.4rem;
   margin-bottom: 2.4rem;
   font-size: 2.8rem;
@@ -128,14 +128,14 @@ p {
 
 a {
   text-decoration: none;
-  color: var(--naranja2);
+  color: white;
 }
 
 
 .iconSocial {
   width: 30px;
   height: 30px;
-  margin: 0px 3px 0px 3px;
+  margin: 0px 8px 0px 8px;
 }
 .responsive {
   width: 100%;
@@ -217,4 +217,3 @@ a {
   width: 20%;
   justify-content: space-between;
 }
-
